lib: Fix potential crash on device removal

Patch 17983ace (lib: Use GDBusObjectManager) ported the interface
addition and removal to GDBusObjectManager. However the parameter list
of interface_remove was not updated correctly.

https://bugzilla.gnome.org/show_bug.cgi?id=790714